--- a/login.html
+++ b/login.html
@@ -29,7 +29,8 @@
                             </label>
                         </span>
                 </br>
-                <button class="btn btn-theme btn-block"><i class="fa fa-lock"></i>Ingresar</button>    
+                <button class="btn btn-theme btn-block"><i class="fa fa-lock"></i>Ingresar</button>
+                <a class="btn btn-theme btn-block" href="consulta.php" role="button"><i class="fa fa-lock"></i>Consultar Calendario</a>   
                 </div>
             </form>
         </div>
