--- a/login.html
+++ b/login.html
@@ -59,5 +59,6 @@
         
       });
     </script>
+     <!-- /Para validar el boton de adminstrar eventos o ingresar a la app-->
 </body>
 </html>
